Esboço de animais por região

--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="src\index.css"/>
-    <link rel="stylesheet" href="src\reset.css"/>
+    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../reset.css"/>
+    <link rel="stylesheet" href="./animais_regioes.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -18,5 +19,41 @@
          <h1 class="titulo__principal">Instituto Jaguatirica</h1>
         <img class="cabecalho__mobile__item cabecalho__menu_hamburguer" src="../assets/images/menu_hamburguer.png" >
     </div>
+    <div class="cabecalho__desktop">
+      <img class="cabecalho__desktop__item cabecalho__logo" src="../assets/images/logoIJ.png" >
+      <ul class="cabecalho__desktop__lista">
+        <li class="cabecalho__desktop__pags" href="./src/templates/about.html">Sobre Nós</li>
+        <li class="cabecalho__desktop__pags" href="./src/templates/programas.html">Programas</li>
+        <li class="cabecalho__desktop__pags" href="#">Animais</li> <!---abrir lista embaixo com os links para por região e por espécie--->
+        <li class="cabecalho__desktop__pags" href="./src/templates/cadastro_voluntario.html">Voluntariado</li>
+        <li class="cabecalho__desktop__pags" href="#">Doações</li> <!---abrir lista embaixo com os links para doação e apadrinhamento--->
+      </ul>
+ </div>
     </header>
+    <h2>Nossos animais e seus habitats!</h2>
+    <h3>Amazônia</h3>
+    <p>
+      <ul>
+        <li>'Yara', 'Peixe-boi', 'Fêmea', 'Mamífero','Trichechus inunguis',  '2023-01-09', 'Ameaçado'</li>
+        <li>'Fuleco', 'Tatu-canastra', 'Macho', 'Mamífero','Priodontes maximus', '2023-01-07', 'Ameaçado'</li>
+        <li>'Iporã', 'Jabuti-tinga', 'Macho', 'Réptil','Chelonoidis denticulatus','2023-01-05', 'Ameaçado'</li>
+      </ul>
+    </p>
+    <h3>Cerrado</h3>
+    <p>
+      <ul>
+        <li>('Jade', 'Ararinha-azul', 'Fêmea', 'Ave', 'Cyanopsitta spixii', '2023-01-02', 'Extinto na Natureza'),</li>
+        <li>('Tande', 'Tamanduá-bandeira', 'Macho', 'Mamífero', 'Myrmecophaga tridactyla', 'Cerrado', '2023-01-04', 'Vulnerável'),</li>
+        <li>('Guarati', 'Lobo-guará','Macho', 'Mamífero', 'Chrysocyon brachyurus', 'Cerrado', '2023-01-06', 'Vulnerável'),</li>
+      </ul>
+    </p>
+    <h3>Mata Atlântica</h3>
+    <p>
+      <ul>
+        <li>Juma, onça-pintada, fêmea, Mamífero, Panthera onca, 2023-01-01, Ameaçado</li>
+        <li>Taru, Mico-leão-dourado, Macho, Mamífero, Leontopithecus rosalia, 2023-01-03, Ameaçado,</li>
+        <li>Sombra, Gato-do-mato, Macho, Mamífero, Leopardus wiedii, 2023-01-08, Vulnerável</li>
+        <li>Pitanga, Jaguatirica, Fêmea, Mamífero, Leopardus pardalis, 2023-01-10, Ameaçado</li>
+      </ul>
+    </p>
   </body>
