adição do menu funcional em todas as páginas

--- a/Front/vite-project/src/templates/doacao.html
+++ b/Front/vite-project/src/templates/doacao.html
@@ -12,6 +12,25 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <div class="topnav" id="myTopnav">
+      <img src="src/assets/images/logoIJ.png">
+      <div class="putz">
+        <a href="src/templates/about.html" class="active">Sobre nós</a>
+        <a href="src/templates/programas.html">programas</a>
+        <a href="src/templates/cadastro_voluntario.html">voluntariado</a>
+        <div class="dropdown">
+          <button class="dropbtn">animais
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="src/templates/animais_regioes.html">Região</a>
+            <a href="src/templates/animais_especies.html">Taxonomia</a>
+          </div>
+        </div>
+        <a href="#about">doações</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      </div>
+    </div>
     <header class="cabecalho">
       <div class="cabecalho__mobile">
          <img class="cabecalho__mobile__item cabecalho__logo" src="../assets/images/logoIJ.png" >
@@ -19,4 +38,4 @@
         <img class="cabecalho__mobile__item cabecalho__menu_hamburguer" src="../assets/images/menu_hamburguer.png" >
     </div>
     </header>
-  </body>
+  </body> 
