--- a/Front/vite-project/src/templates/programas.html
+++ b/Front/vite-project/src/templates/programas.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="src\index.css"/>
-    <link rel="stylesheet" href="src\reset.css"/>
+    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../reset.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -13,21 +13,21 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <img src="src/assets/images/logoIJ.png">
+      <img src="../assets/images/logoIJ.png">
       <div class="putz">
-        <a href="src/templates/about.html" class="active">Sobre nós</a>
-        <a href="src/templates/programas.html">programas</a>
-        <a href="src/templates/cadastro_voluntario.html">voluntariado</a>
+        <a href="./about.html" class="active">Sobre nós</a>
+        <a href="./programas.html">programas</a>
+        <a href="./cadastro_voluntario.html">voluntariado</a>
         <div class="dropdown">
           <button class="dropbtn">animais
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="src/templates/animais_regioes.html">Região</a>
-            <a href="src/templates/animais_especies.html">Taxonomia</a>
+            <a href="./animais_regioes.html">Região</a>
+            <a href="./animais_especies.html">Taxonomia</a>
           </div>
         </div>
-        <a href="#about">doações</a>
+        <a href="./doacao.html">doações</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
     </div>
