--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="../assets/images/logoIJ.png" />
     <link rel="stylesheet" href="../index.css"/>
     <link rel="stylesheet" href="../reset.css"/>
     <link rel="stylesheet" href="./animais_regioes.html">
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>IJ</title>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <img src="../assets/images/logoIJ.png">
+      <a href="./../../index.html"><img src="../assets/images/logoIJ.png"></a>
       <div class="putz">
         <a href="./about.html" class="active">Sobre nós</a>
         <a href="./programas.html">programas</a>
