Menu Hamburguer Mobile

--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -10,6 +10,7 @@
   --cor-escura-1:#3E2111;
   --cor-escura-2:#19090A;
   --cor-verde-escuro: #163513;
+  --cor-escura-2-hover: #4414178f;
   --fonte-primaria: "Poppins", sans-serif;
 }
 
