--- a/Front/vite-project/src/templates/about.html
+++ b/Front/vite-project/src/templates/about.html
@@ -12,11 +12,34 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <header class="cabecalho">
-      <div class="cabecalho__mobile">
-         <img class="cabecalho__mobile__item cabecalho__logo" src="../assets/images/logoIJ.png" >
-         <h1 class="titulo__principal">Instituto Jaguatirica</h1>
-        <img class="cabecalho__mobile__item cabecalho__menu_hamburguer" src="../assets/images/menu_hamburguer.png" >
-    </div>
-    </header>
+    <header>
+      <nav class="hdr">
+        <div class="hdr-mobile">
+          <img class="hdr-mobile-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <h1 class="title-principal">Instituto Jaguatirica</h1>
+          <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
+            <span class="icon"></span>
+          </button>
+          <ul id="menu" class="menu">
+            <li class="menu-item"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#">Sobre Nós</a></li>
+            <li class="menu-item"><a href="#">Programas</a></li>
+            <li class="menu-item"><a href="#">Animais</a></li>
+            <li class="menu-item"><a href="#">Voluntariado</a></li>
+            <li class="menu-item"><a href="#">Doações</a></li>
+          </ul>
+        </div>
+        <div class="hdr-desktop">
+          <img class="hdr-desktop-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
+            <li class="menu-item-dkt"><a href="#">Home</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
+            <li class="menu-item-dkt"><a href="#">Animais</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item-dkt"><a href="#">Doações</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header> 
   </body>
