--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -13,23 +13,36 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <header class="cabecalho">
-      <div class="cabecalho__mobile">
-         <img class="cabecalho__mobile__item cabecalho__logo" src="../assets/images/logoIJ.png" >
-         <h1 class="titulo__principal">Instituto Jaguatirica</h1>
-        <img class="cabecalho__mobile__item cabecalho__menu_hamburguer" src="../assets/images/menu_hamburguer.png" >
-    </div>
-    <div class="cabecalho__desktop">
-      <img class="cabecalho__desktop__item cabecalho__logo" src="../assets/images/logoIJ.png" >
-      <ul class="cabecalho__desktop__lista">
-        <li class="cabecalho__desktop__pags" href="./src/templates/about.html">Sobre Nós</li>
-        <li class="cabecalho__desktop__pags" href="./src/templates/programas.html">Programas</li>
-        <li class="cabecalho__desktop__pags" href="#">Animais</li> <!---abrir lista embaixo com os links para por região e por espécie--->
-        <li class="cabecalho__desktop__pags" href="./src/templates/cadastro_voluntario.html">Voluntariado</li>
-        <li class="cabecalho__desktop__pags" href="#">Doações</li> <!---abrir lista embaixo com os links para doação e apadrinhamento--->
-      </ul>
- </div>
-    </header>
+    <header>
+      <nav class="hdr">
+        <div class="hdr-mobile">
+          <img class="hdr-mobile-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <h1 class="title-principal">Instituto Jaguatirica</h1>
+          <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
+            <span class="icon"></span>
+          </button>
+          <ul id="menu" class="menu">
+            <li class="menu-item"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#">Sobre Nós</a></li>
+            <li class="menu-item"><a href="#">Programas</a></li>
+            <li class="menu-item"><a href="#">Animais</a></li>
+            <li class="menu-item"><a href="#">Voluntariado</a></li>
+            <li class="menu-item"><a href="#">Doações</a></li>
+          </ul>
+        </div>
+        <div class="hdr-desktop">
+          <img class="hdr-desktop-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
+            <li class="menu-item-dkt"><a href="#">Home</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
+            <li class="menu-item-dkt"><a href="#">Animais</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item-dkt"><a href="#">Doações</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header> 
     <h2>Nossos animais e seus habitats!</h2>
     <h3>Amazônia</h3>
     <p>
