--- a/Front/vite-project/src/static/header.css
+++ b/Front/vite-project/src/static/header.css
@@ -1,12 +1,12 @@
 
-.hdr, .hdr-mobile, .cabecalho__desktop, .hamburguer-button, .nav-menu, .menu, .menu-item {
+.hdr, .hdr-mobile, .hdr-desktop, .hamburguer-button, .nav-menu, .menu, .menu-item {
   font-family: var(--fonte-primaria);
   color: var(--cor-branco-principal);
   background-color: var(--cor-escura-2);
   list-style: none;
   position:relative;
   padding: 0.15em;
-}
+} 
 
 .menu {
   display: flex;
@@ -18,8 +18,8 @@
 
 .hamburguer-button .icon {
   display: inline-block;
-  width: 1em;
-  height: 1em;
+  width: 10%;
+  height: 10%;
   text-align: center;
   padding: 0.5em;
 }
@@ -38,6 +38,7 @@
   cursor: pointer;
   font-size: 1rem;
   display: none;
+  text-align: center;
 }
 
 .menu-item, .menu-item a{
@@ -72,25 +73,24 @@
 
 .hamburguer-button-js-enabled + .menu-closed {
   display: none;
-  
 }
 
 .hamburguer-button-js-enabled{
   display: block;
 }
 
-.titulo__principal {
+.title-principal {
   font-weight: 600;
   font-size: 1.25rem;
   text-align: center;
   color: var(--cor-branco-principal);
 }
 
-  .hdr-logo {
-    height: 10%;
-    width: 10%;
-    border-radius: 50%;
-  }
+.hdr-logo {
+  height: 10%;
+  width: 10%;
+  border-radius: 50%;
+}
 
 @media screen and (min-width: 380px) {
 
@@ -102,11 +102,10 @@
     margin: 0.5em 0.75em;
   } 
 
-  .titulo__principal {
+  .title-principal {
     font-size: 1.5rem;
   }
 }
-
 
 @media screen and (min-width: 700px) {
   .hdr-mobile {
@@ -118,13 +117,16 @@
     margin: 0.5em;
   }
 
-  .titulo__principal {
-    font-size: 2.25rem;
+  .hamburguer-button-js-enabled + .menu {
+    top: 6em;
   }
 
+  .title-principal {
+    font-size: 2.25rem;
+  }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 900px) {
   .hdr-mobile {
     display: none;
   }
@@ -133,7 +135,7 @@
     display: flex;
     flex-direction: row;
     width: auto;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 0.5em;
   }
@@ -148,38 +150,76 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    font-size: 1.25rem;
   }
 
-  .
-
-
-  .cabecalho__desktop {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-  }
-
-  .cabecalho__desktop__lista {
+  .menu-dkt {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
     padding: 0.5em;
   }
 
-  .cabecalho__desktop__pags {
+  .menu-item-dkt {
     display: flex;
-    justify-content: space-between;
-    font-size: 1.675rem;
-    margin: 0 0.5em;
+    justify-content: space-evenly;
+    margin: 0 0.65em;
+    font-size: 1.25rem;
   }
+}
+
+@media screen and (min-width: 1000px) {
+  .hdr-mobile {
+    display: none;
+  }
+
+  .hdr-desktop {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0.5em;
+  }
+
+  .hdr-logo {
+    height: 6%;
+    width: 6%;
+    border-radius: 50%;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .menu-dkt {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 0.5em;
+  }
+
+  .menu-item-dkt {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 1.5rem;
+    margin: 0 0.65em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+
+  .menu-item-dkt {
+    font-size: 1.85rem;
+    margin: 0 0.675em;
+  }
+
 }
 
 @media screen and (min-width: 1400px) {
 
-  .cabecalho__desktop__pags {
+  .menu-item-dkt {
     font-size: 2.85rem;
     margin: 0 1em;
   }
