Inserindo tag script

--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -69,4 +69,5 @@
         <li>Pitanga, Jaguatirica, Fêmea, Mamífero, Leopardus pardalis, 2023-01-10, Ameaçado</li>
       </ul>
     </p>
+    <script src="menu.js"></script>
   </body>
