--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -72,4 +72,5 @@
         <li>Pitanga, Jaguatirica, Fêmea, Mamífero, Leopardus pardalis, 2023-01-10, Ameaçado</li>
       </ul>
     </p>
+    <script src="menu.js"></script>
   </body>
