--- a/Front/vite-project/src/templates/cadastro_voluntario.html
+++ b/Front/vite-project/src/templates/cadastro_voluntario.html
@@ -105,5 +105,5 @@
       <input type="button" id="btnGerar" value="Enviar" onclick="envioVoluntario()"/>
     </fieldset>
   </form>
-
+<script src="menu.js"></script>
 </body>
