--- a/Front/vite-project/src/templates/programas.html
+++ b/Front/vite-project/src/templates/programas.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -43,5 +43,5 @@
         </div>
       </nav>
     </header> 
-
+    <script src="menu.js"></script>
   </body>
